--- a/client/src/components/Layout/Navbar/navbar.css
+++ b/client/src/components/Layout/Navbar/navbar.css
@@ -10,6 +10,7 @@
     list-style: none;
     width:100%;
     justify-content:space-between;
+    
 }
 .nav-item {
     cursor: pointer;
@@ -17,36 +18,36 @@
     border-bottom: 1.5px solid transparent;
     width: 105px;
     height:88px;
+
 }
   
-  .navbar__link p{
-    text-align: center;
-    margin-top: 35px;
-    font-family: 'Poppins', sans-serif;
-    font-size: 14px;
-    line-height: 20px;
-    color: #374150;
-}
 
-.navbar__link p:hover {
+.navbar__link:hover {
     color: #00AEFF;
     border-bottom: 2px solid #00AEFF;
-    width: 105px;
-    height:54px;
 }
-
 .navbar__link {
     text-decoration: none;
     width: 105px;
     height: 88px;
     border-bottom: 2px solid transparent;
-
+    font-family: 'Poppins', sans-serif;
+    font-size: 14px;
+    line-height: 20px;
+    color: #374150;
+    justify-content: center;
+    display: flex;
+    align-items: center;
 }
-.navbar__link--active p{
+
+.navbar__link--active {
     border-bottom: 2px solid #00AEFF;
-    height: 54px;
+    height: 88px;
     width: 105px;
     color:#00AEFF;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 @media only screen and (max-width: 960px) {
@@ -54,7 +55,7 @@
         width:90px;
     }
 }
-  @media only screen and (max-width: 768px) {
+@media screen and (max-width: 768px) {
 
     .nav-links {
         display: flex;
@@ -73,7 +74,7 @@
         left: 0;
         border-bottom-left-radius: 10px;
         border-bottom-right-radius: 6px;
-        box-shadow: 0px 10px 10px #d3d3d3;
+        box-shadow: 0px 15px 15px #9b9b9b;
     }
 
     .nav-item {
@@ -90,7 +91,7 @@
         text-align: left;
         padding: 0 20px;
     }
-    .navbar__link--active p{
+    .navbar__link--active {
         color:#00AEFF;
         border-bottom: none;
         background-color:#fff;
