--- a/client/src/components/Sections/Home/Reviews/Carousel.css
+++ b/client/src/components/Sections/Home/Reviews/Carousel.css
@@ -5,7 +5,7 @@
   justify-content: space-between;
   align-items: center;
   flex-direction: row;
-  padding: 40px 70px;
+  padding: 20px 70px;
 
 }
 .title {
@@ -31,9 +31,11 @@
     border: 1px solid #111826;
     margin-right: 8px;
     cursor: pointer;
+    align-items: center;
+    justify-content: center;
 }
 .arrow-btn {
-  top: 45%;
+  top: 50%;
 }
 .next {
   float: right;
@@ -80,12 +82,11 @@
   width: 12px;
   height: 20px;
   transform: scaleX(-1);
-
 }
 .arrow_right {
   width: 12px;
   height: 20px;
-
+  align-items: center;
 }
 
 .quotation {
