--- a/client/src/components/Layout/Navbar/navbar.css
+++ b/client/src/components/Layout/Navbar/navbar.css
@@ -61,7 +61,7 @@
         display: flex;
         flex-direction: column;
         position: absolute;
-        justify-content: space-between;
+        justify-content: center;
         width: 100%;
         top: 80px;
         left: -100%;
@@ -78,9 +78,12 @@
     }
 
     .nav-item {
-        padding: 10px 0;
+        display: flex;
+        padding: 10px 20px;
         height:60px;
-        text-align:flex-start;
+        justify-content:flex-start;
+        align-items: flex-start;
+        text-align: left;
     }
 
     .nav-icon {
@@ -88,17 +91,17 @@
     }
 
     .navbar__link p{
-        text-align: left;
-        padding: 0 20px;
+        text-align: flex-start;
+        padding: 0 0px;
     }
     .navbar__link--active {
         color:#00AEFF;
-        border-bottom: none;
+        border-bottom: 0px;
         background-color:#fff;
     }
-    .navbar__link p:hover {
+    .navbar__link :hover {
         color: #00AEFF;
-        border-bottom: none;
+        border-bottom: 0px;
     }
 }
 
