--- a/client/src/components/Sections/About/InfoFour/Carousel.css
+++ b/client/src/components/Sections/About/InfoFour/Carousel.css
@@ -31,6 +31,35 @@
     background-color: #00AEFF;
   }
   
+  .dots_about {
+    display: block;
+    margin: auto;
+    padding: 20px;
+    border-radius: 40px;
+    text-align: center;
+    margin-bottom: 30px;
+  }
+  .dots_about li button {
+    border: none;
+    background: #bae9ff;
+    color: transparent;
+    cursor: pointer;
+    display: block;
+    height: 4px;
+    width: 48px;
+    border-radius: 32px;
+    margin-right:5px;
+  }
+  .dots_about li {
+    list-style: none;
+    cursor: pointer;
+    display: inline-block;
+    margin: 0 2px;
+    padding: 0;
+  }
+  .dots_about li.slick-active button {
+    background-color: #00AEFF;
+  }
   @media screen and (max-width: 600px) {
       .carousel_container {
         display:block;
