--- a/client/src/components/Sections/Home/Reviews/Carousel.css
+++ b/client/src/components/Sections/Home/Reviews/Carousel.css
@@ -140,10 +140,16 @@
   .button {
     width:40px;
     height:40px;
+    padding:7px 10px;
+
   }
   .carousel {
     justify-content: center;
     padding: 10px 20px;
     width:100%;
+  }
+  .dots li button {
+    width: 28px;
+
   }
 }
