--- a/client/src/components/Layout/Navbar/navbar.css
+++ b/client/src/components/Layout/Navbar/navbar.css
@@ -48,6 +48,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    text-decoration: none;
+
 }
 
 @media only screen and (max-width: 960px) {
