--- a/client/src/components/Sections/ContactUs/Form.css
+++ b/client/src/components/Sections/ContactUs/Form.css
@@ -1,28 +1,121 @@
-.input-group {
+.input-container {
+    display:flex;
+    flex-direction:column;
+}
+  .input-name {
+    width:99%;
+    height:60px;
+    border:1px solid #E5E7EB;
+    border-radius: 6px;
+    padding:10px;
+    margin-bottom:10px;
+    padding:0px 10px;
+    margin-top:30px;
+    margin-right: 10px;
+    font-size:14px;
+  }
+  
+  .input-name:focus {
+    border-color: #007eff;
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075),
+      0 0 0 3px rgba(0, 126, 255, 0.1);
+    outline: none;
+  }
+  
+  .input-name.error {
+    border-color: red;
+  }
+  
+  input {
     width:100%;
-    max-width:222px;
     height:60px;
     border:1px solid #E5E7EB;
     border-radius: 6px;
     padding:10px;
     margin-bottom:10px;
-}
+    padding:0px 10px;
+    margin-top:10px;
+    font-size:14px;
+  }
+  
+  input:focus {
+    border-color: #007eff;
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075),
+      0 0 0 3px rgba(0, 126, 255, 0.1);
+    outline: none;
+  }
+  
+  input.error {
+    border-color: red;
+  }
+  
+  label {
+    font-weight: bold;
+    display: block;
+    margin-bottom: .5rem;
+  }
+  
+  .input-feedback {
+    color: red;
+    flex-direction: column;
+  }
 
-.input-column {
-    width:95%;
-    height:60px;
+  textarea {
+    width:100%;
+    height:150px;
     border:1px solid #E5E7EB;
     border-radius: 6px;
     padding:10px;
-    margin-bottom:10px;
+    margin-bottom:20px;
+    margin-top:10px;
+    font-size:14px;
+  }
+
+  textarea:focus {
+    border-color: #007eff;
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075),
+      0 0 0 3px rgba(0, 126, 255, 0.1);
+    outline: none;
+  }
+
+  textarea.error {
+    border-color: red;
+  }
+  
+  .form-button {
+    width: 100%;
+    background-color: #28B8A7;
+    height:48px;
+    justify-content: center;
+    color: #fff;
+    font-size: 18px;
+    font-weight: 600;
+    border:none;
+    border-radius: 6px;
+    margin-top: 20px;
+    cursor:pointer;
+
+  }
+  
+  .form-button:disabled {
+    opacity: .5;
+    cursor: not-allowed !important;
+  }
+  .form-button:hover {
+    color: #28B8A7;
+    background-color: #DCF8F4;
 }
 
-.input-comment {
-    width:95%;
-    height:100px;
-    border:1px solid #E5E7EB;
-    border-radius: 6px;
-    padding:10px;
-    margin-bottom:10px; 
-    padding: 0px 10px;
-}
+    .form-button:focus {
+        border: 1.5px solid #135A51;
+        background-color: #28B8A7;
+        color: #fff;
+
+    }
+    
+    .form-button.outline {
+    background-color: #eee;
+    border: 1px solid #aaa;
+    color: #555;
+  }
+  
